# workman

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  README.md  app.rs  event_handler.rs  main.rs  models.rs  session.rs  shortcuts.rs  terminal_handler.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  session.rs  state.rs
src-tauri/src/commands/: config.rs  git.rs  mod.rs  projects.rs  pty.rs  vscode.rs  worktrees.rs
src/api/: tauri.ts  types.ts
src/components/: AddProjectModal.tsx  AddRepoModal.tsx  CommitMessageModal.tsx  ConfirmDeleteModal.tsx  ContextMenu.tsx  HelpModal.tsx  OptionsModal.tsx  OutputPane.tsx  ProjectTree.tsx  TerminalPane.tsx
src/hooks/: usePtySession.ts  useWorktreeStatus.ts
src/styles/: global.css  theme.ts
