[package]
name = "workman"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.3"
tokio = { version = "1.43.0", features = ["full"] }
portable-pty = "0.8.1"
vt100 = "0.15.2"

[dev-dependencies]
tempfile = "3.17.1"
