[package]
name = "workman"
version = "1.0.0"
edition = "2024"

[lib]
name = "workman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "workman"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
dirs = "6"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
